--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     
     <section class="home" id="home">
         <div class="image" data-aos="fade-right">
-           <img src="https://www.instagram.com/p/CviO3MXhd9sGFpZAPUSO3bE3vQEkO2-ZXF1foQ0/" alt="">
+           <img src="images/logoogmine.jpg" alt="">
         </div>
     
         <div class="content">
