--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     
     <section class="home" id="home">
         <div class="image" data-aos="fade-right">
-           <img src="images/linkedin.jpeg" alt="">
+           <img src="images/logoofmine.jpg" alt="">
         </div>
     
         <div class="content">
