--- a/index.html
+++ b/index.html
@@ -98,11 +98,13 @@
               <div class="bar" data-aos="fade-left"> <h3><span>Bootstrap</span> <span>85%</span></h3> </div>
                <div class="bar" data-aos="fade-right"> <h3><span>Reactjs</span> <span>85%</span></h3> </div>
               <div class="bar" data-aos="fade-left"> <h3><span>Node.js + Express.js</span> <span>60+%</span></h3> </div>
-              <div class="bar" data-aos="fade-right"> <h3><span>DBMS</span> <span>60+%</span></h3> </div>
+              <div class="bar" data-aos="fade-right"> <h3><span>DBMS</span> <span>90+%</span></h3> </div>
               <div class="bar" data-aos="fade-left"> <h3><span>C & C++</span> <span>80%</span></h3> </div>
                <div class="bar" data-aos="fade-right"> <h3><span>Python</span> <span>85%</span></h3> </div>
                <div class="bar" data-aos="fade-left"> <h3><span> Kotlin</span> <span>85%</span></h3> </div>
-              <div class="bar" data-aos="fade-right"> <h3><span>DSA</span> <span>65%</span></h3> </div>
+              <div class="bar" data-aos="fade-right"> <h3><span>Data Structures</span> <span>90%</span></h3> </div>
+               <div class="bar" data-aos="fade-right"> <h3><span>Machine Learning</span> <span>80%</span></h3> </div>
+               <div class="bar" data-aos="fade-right"> <h3><span>Deep Learning</span> <span>60%</span></h3> </div>   
            </div>
      
         </div>
